// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #1476FB;
  border-radius: 11px;
  box-sizing: border-box;
  color: #1476FB;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #1476FB;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #1476FB;
  border-radius: 14px;
  box-sizing: border-box;
  color: #1476FB;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #1476FB;
  border-radius: 20px;
  box-sizing: border-box;
  color: #1476FB;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #858585;
  border-radius: 11px;
  box-sizing: border-box;
  color: #858585;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #858585;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #858585;
  border-radius: 14px;
  box-sizing: border-box;
  color: #858585;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #858585;
  border-radius: 20px;
  box-sizing: border-box;
  color: #858585;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #4CB050;
  border-radius: 11px;
  box-sizing: border-box;
  color: #4CB050;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #4CB050;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #4CB050;
  border-radius: 14px;
  box-sizing: border-box;
  color: #4CB050;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #4CB050;
  border-radius: 20px;
  box-sizing: border-box;
  color: #4CB050;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatOrange" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FF9700;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FF9700;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF9700;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatOrange"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatOrange" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FF9700;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FF9700;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF9700;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatOrange"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatOrange" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FF9700;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FF9700;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF9700;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatOrange"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FF456A;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FF456A;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FF456A;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FF456A;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FF456A;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FF456A;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FFE200;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFE200;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFE200;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FFE200;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFE200;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid #FFE200;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFE200;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "orange" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FF9700;
  border: 1px solid #FF9700;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="orange"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "orange" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FF9700;
  border: 1px solid #FF9700;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="orange"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "orange" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FF9700;
  border: 1px solid #FF9700;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="orange"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red", tamaño "big" y con estilo para "float" y "width". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  fill: #FFF;
  height: 30px;
  margin: 3px 0px 0px 6px;
  width: 30px;
}

.c4 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c5 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c6 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c7 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c8 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c9 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c10 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c11 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c12 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c13 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c14 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c15 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c16 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c17 .c1 {
  fill: #1476FB;
  height: 15px;
  width: 15px;
}

.c18 .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c19 .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c20 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c21 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c22 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c23 .c1 {
  fill: #4CB050;
  height: 15px;
  width: 15px;
}

.c24 .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c25 .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c26 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c27 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c28 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c29 .c1 {
  fill: #FFE200;
  height: 15px;
  width: 15px;
}

.c30 .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c31 .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c32 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c33 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c34 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c35 .c1 {
  fill: #858585;
  height: 15px;
  width: 15px;
}

.c36 .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c37 .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c38 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c39 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c40 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c41 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c42 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c43 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c44 .c1 {
  fill: #FF9700;
  height: 15px;
  width: 15px;
}

.c45 .c1 {
  fill: #FF9700;
  height: 20px;
  width: 20px;
}

.c46 .c1 {
  fill: #FF9700;
  height: 30px;
  width: 30px;
}

.c47 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c48 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 5px 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  style={
    Object {
      "float": "left",
      "width": "100%",
    }
  }
  theme="red"
>
  <svg
    alt="solidTimesCircle"
    className="c1 c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z\\"/>",
      }
    }
    onClick={[Function]}
    size="big"
    viewBox="0 0 512 512"
    x="0px"
    y="0px"
  />
</label>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red", tamaño "medium" y con estilo para "float" y "width". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  fill: #FFF;
  height: 20px;
  margin: 3px 0px 0px 6px;
  width: 20px;
}

.c4 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c5 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c6 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c7 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c8 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c9 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c10 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c11 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c12 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c13 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c14 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c15 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c16 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c17 .c1 {
  fill: #1476FB;
  height: 15px;
  width: 15px;
}

.c18 .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c19 .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c20 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c21 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c22 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c23 .c1 {
  fill: #4CB050;
  height: 15px;
  width: 15px;
}

.c24 .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c25 .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c26 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c27 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c28 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c29 .c1 {
  fill: #FFE200;
  height: 15px;
  width: 15px;
}

.c30 .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c31 .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c32 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c33 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c34 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c35 .c1 {
  fill: #858585;
  height: 15px;
  width: 15px;
}

.c36 .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c37 .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c38 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c39 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c40 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c41 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c42 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c43 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c44 .c1 {
  fill: #FF9700;
  height: 15px;
  width: 15px;
}

.c45 .c1 {
  fill: #FF9700;
  height: 20px;
  width: 20px;
}

.c46 .c1 {
  fill: #FF9700;
  height: 30px;
  width: 30px;
}

.c47 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 5px 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  style={
    Object {
      "float": "left",
      "width": "100%",
    }
  }
  theme="red"
>
  <svg
    alt="solidTimesCircle"
    className="c1 c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z\\"/>",
      }
    }
    onClick={[Function]}
    size="medium"
    viewBox="0 0 512 512"
    x="0px"
    y="0px"
  />
</label>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red", tamaño "small" y con estilo para "float" y "width". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  fill: #FFF;
  height: 15px;
  margin: 3px 0px 0px 6px;
  width: 15px;
}

.c4 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c5 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c6 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c7 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c8 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c9 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c10 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c11 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c12 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c13 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c14 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c15 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c16 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c17 .c1 {
  fill: #1476FB;
  height: 15px;
  width: 15px;
}

.c18 .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c19 .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c20 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c21 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c22 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c23 .c1 {
  fill: #4CB050;
  height: 15px;
  width: 15px;
}

.c24 .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c25 .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c26 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c27 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c28 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c29 .c1 {
  fill: #FFE200;
  height: 15px;
  width: 15px;
}

.c30 .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c31 .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c32 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c33 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c34 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c35 .c1 {
  fill: #858585;
  height: 15px;
  width: 15px;
}

.c36 .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c37 .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c38 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c39 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c40 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c41 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c42 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c43 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c44 .c1 {
  fill: #FF9700;
  height: 15px;
  width: 15px;
}

.c45 .c1 {
  fill: #FF9700;
  height: 20px;
  width: 20px;
}

.c46 .c1 {
  fill: #FF9700;
  height: 30px;
  width: 30px;
}

.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 4px 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  style={
    Object {
      "float": "left",
      "width": "100%",
    }
  }
  theme="red"
>
  <svg
    alt="solidTimesCircle"
    className="c1 c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z\\"/>",
      }
    }
    onClick={[Function]}
    size="small"
    viewBox="0 0 512 512"
    x="0px"
    y="0px"
  />
</label>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FF456A;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FF456A;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FF456A;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

<label
  className="c0"
  size="small"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 14px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 28px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  padding: 0px 15px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<label
  className="c0"
  size="medium"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Badge] - Badge con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 20px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 20px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 34px;
  padding: 0px 20px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<label
  className="c0"
  size="big"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][IconBadge] - Badge con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 3px 6px 0px 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c4 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 11px;
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 22px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 0px 10px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c5 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c6 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c7 .c2 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c8 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c9 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c10 .c2 {
  fill: #FF456A;
  height: 15px;
  width: 15px;
}

.c11 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c12 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c13 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c14 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c15 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c16 .c2 {
  fill: #1476FB;
  height: 15px;
  width: 15px;
}

.c17 .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c18 .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c19 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c20 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c21 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c22 .c2 {
  fill: #4CB050;
  height: 15px;
  width: 15px;
}

.c23 .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c24 .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c25 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c26 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c27 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c28 .c2 {
  fill: #FFE200;
  height: 15px;
  width: 15px;
}

.c29 .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c30 .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c31 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c32 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c33 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c34 .c2 {
  fill: #858585;
  height: 15px;
  width: 15px;
}

.c35 .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c36 .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c37 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c38 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c39 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c40 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c41 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c42 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c43 .c2 {
  fill: #FF9700;
  height: 15px;
  width: 15px;
}

.c44 .c2 {
  fill: #FF9700;
  height: 20px;
  width: 20px;
}

.c45 .c2 {
  fill: #FF9700;
  height: 30px;
  width: 30px;
}

.c46 .c2 {
  fill: #FFF;
  height: 15px;
  width: 15px;
}

.c47 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c48 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  padding: 0px 5px 0px 5px;
}

<label
  className="c0 c1"
  icon="solidPlusCircle"
  size="small"
  theme="red"
>
  <svg
    alt="solidPlusCircle"
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z\\"/>",
      }
    }
    viewBox="0 0 512 512"
    x="0px"
    y="0px"
  />
</label>
`;

exports[`[SNAPSHOT][Componentes][Common][NotificationBadge] - Badge tipo notificación. Debe pintar el componente tipo notificación. 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  height: auto;
  margin: 0px;
  padding: 0px;
  position: relative;
  width: auto;
}

.c1 {
  background-color: #FF456A;
  box-sizing: border-box;
  border-radius: 50%;
  color: #FFF;
  font-size: 11px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 0px;
  padding: 0px;
  position: absolute;
  right: -10px;
  text-align: center;
  top: -10px;
  width: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    +9
  </div>
  <label>
    Contador
  </label>
</div>
`;
